src/stylesheets/components/_header.scss
// Navigation ------------- //

$height-nav-secondary: 5rem;
$width-nav-sidebar:    250px;

.usa-site-header {
  background-color: $color-primary-darkest;
  width: 100%;
  z-index: 1;

  a {
    border-bottom: none;
  }

  em {
    display: block;
    font-family: $font-serif;
    font-size: 1.4rem;
    font-style: normal;
    font-weight: $font-bold;
    margin: 0;

    @include media($medium-screen) {
      display: block;
      font-size: $h3-font-size;
    }
  }

  .usa-button-list {
    float: right;
    display: none;
    margin-top: -5px;

    @include media($medium-screen) {
      line-height: 8rem;
      margin-top: 0;
      display: block;
      padding-right: $site-margins;
    }

    // scss-lint:disable SelectorDepth, NestingDepth
    li {
      display: inline;
      font-family: $font-sans;

      &:last-child .usa-button {
        margin-right: 0;
      }
    }

    .usa-button {
      @include margin(0 null);
    }
  }
}

.site-navbar {
  height: 4rem;

  @include media($medium-screen) {
    height: 8rem;
  }

  &.is-scrolled {
    @include media($medium-screen) {
      display: none;
    }
  }

  // Firefox fix so that navbar buttons to align right
  @-moz-document url-prefix() {
    @include media($medium-screen) {
      padding-top: 1px;
    }
  }
}

.site-logo {
  float: left;
  line-height: 37px;
  margin-top: 3px;
  padding-left: $site-margins-mobile;

  @include media($medium-screen) {
    line-height: 7.5rem;
    margin-top: 5px;
    padding-left: $site-margins;
  }

  a {
    color: $color-white;
    text-decoration: none;
  }
}

.site-nav-secondary {
  display: none;

  @include media($medium-screen) {
    background-color: $color-white;
    border-bottom: 1px solid $color-gray-light;
    clear: both;
    display: block;
    height: $height-nav-secondary;
    padding-left: 3rem;
  }

  ul {
    @include unstyled-list;

    li {
      display: inline;
      padding-right: 3rem;
    }
  }

  a {
    @include padding (1.6rem null);
    color: $color-gray;
    font-size: $h6-font-size;
    letter-spacing: 0.3px;
    line-height: $height-nav-secondary;
    text-decoration: none;

    &:hover {
      color: $color-primary;
      text-decoration: underline;
    }

    &.usa-current {
      color: $color-primary;
      font-weight: $font-bold;
    }
  }
}

// scss-lint:disable PropertyCount
.menu-btn {
  background-color: $color-primary;
  color: $color-white;
  display: inline;
  float: right;
  font-size: $h6-font-size;
  line-height: 4rem;
  height: 4rem;
  width: 5.8rem;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;

  @include media($medium-screen) {
    display: none;
  }

  &:hover {
    color: $color-white;
    background-color: $color-primary-darker;
  }

  &:visited {
    color: $color-white;
  }
}
// scss-lint:enable PropertyCount

.overlay {
  @include position(fixed, 0);
  background: $color-black;
  opacity: 0;
  transition: all 0.2s ease-in-out;
  visibility: hidden;
  z-index: 9999;

  &.is-visible {
    opacity: 0.1;
    visibility: visible;
  }
}

// Sidebar Nav --------- //

.sidenav {
  display: none;

  @include media($medium-screen) {
    bottom: 0;
    display: block; // starting: not scrolled
    float: left; // starting: not scrolled
    overflow: auto;
    padding: 4rem 1rem 3rem 3rem;
    width: $width-nav-sidebar;
  }

  &.is-scrolled {
    position: fixed;
    top: $height-nav-secondary;
  }

  .lt-ie9 & {
    width: 25%;
  }

  .usa-navigation-submenu {
    &[aria-hidden="false"] {
      display: block;
    }
  }
}

.usa-navigation {
  @include usa-sidenav-list;
}

.usa-navigation-submenu {
  @include usa-sidenav-sub_list;
}

.usa-navlink {
  &:hover {
    span {
      @include media($medium-screen) {
        border-bottom: 1rem solid $color-primary;
        padding-bottom: 1rem;
      }
    }
  }
}

.sidenav-mobile {
  $sliding-panel-width: 26rem;
  @include padding (2rem);
  @include position(fixed, 0 0 0 auto);
  @include size($sliding-panel-width 100%);
  @include transform(translateX($sliding-panel-width));
  background: $color-white;
  border-left: 1px solid $color-gray-light;
  border-right: 0;
  display: block;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  z-index: 999999;

  @media (min-width: $medium-screen) {
    overflow-y: visible;
    position: relative;
    width: 100%;

    .usa-navigation {
      li {
        border-top: none;
      }

      > li {
        display: inline-block;
        margin-left: -4px;

        > a {
          @include padding(null 1.5rem);
          color: $color-gray;
          font-size: $h5-font-size;
          font-weight: $font-bold;
          line-height: 1.2;

          &:hover {
            background-color: transparent;
          }
        }
      }
    }
  }

  &.is-visible {
    @include transform(translateX(0));
    @include transition(all 0.3s ease-in-out);
  }

  nav {
    margin-top: 6rem;
    min-height: 100%;

    @media (min-width: $medium-screen) {
      margin-top: 0;
    }
  }

  button {
    @include button-unstyled;
    font-weight: $font-normal;
    padding: 1rem 1.5rem 1rem 1.8rem;

    @include media($medium-screen) {
      color: $color-gray;
      font-size: $h5-font-size;
      font-weight: $font-bold;
      padding-left: 1.5rem;
      padding-right: 3rem;
      width: initial;
    }

    &:focus,
    &:active {
      box-shadow: $focus-shadow;
    }

    &:hover {
      background-color: $color-gray-lightest;
      color: $color-primary;

      @include media($medium-screen) {
        &:hover {
          background-color: transparent;
        }
      }
    }

    &[aria-expanded=false] {
      background-image: url('../img/plus-alt.png');
      background-image: url('../img/plus-alt.svg');
      background-repeat: no-repeat;
      background-position: right 0 center;
      background-size: 1rem;

      @include media($medium-screen) {
        background-image: url('../img/angle-arrow-down.png');
        background-image: url('../img/angle-arrow-down.svg');
        background-position: right 1.5rem center;
      }
    }

    &[aria-expanded=true] {
      background-image: url('../img/minus-alt.png');
      background-image: url('../img/minus-alt.svg');
      background-repeat: no-repeat;
      background-position: right 0 center;
      background-size: 1rem;

      @include media($medium-screen) {
        background-color: $color-primary-darkest;
        color: $color-white;
        background-image: url('../img/angle-arrow-down-hover.png');
        background-image: url('../img/angle-arrow-down-hover.svg');
        background-position: right 1.5rem center;

        &:hover {
          background-color: $color-primary-darkest;
        }
      }
    }
  }

  .usa-navigation-submenu {
    @include media($medium-screen) {
      @include padding(1.15rem null);
      background-color: $color-primary-darkest;
      min-width: 215px;
      width: initial;
      position: absolute;
    }

    a {
      @include media($medium-screen) {
        color: $color-white;
        padding-left: 1.8rem;
      }

      &:hover {
        @include media($medium-screen) {
          background-color: $color-primary-darkest;
          text-decoration: underline;
        }
      }

      &:hover,
      &.usa-current {
        @include media($medium-screen) {
          padding-left: 1.8rem;
        }
      }
    }

    &[aria-hidden=true] {
      display: none;
    }
  }

  .usa-current {
    border-left: 4px solid $color-primary;
    color: $color-primary;
    font-weight: $font-bold;
    padding-left: 1.4rem;
  }

  .usa-button {
    width: 100%;
  }

  .usa-button-list {
    margin-top: 4rem;
  }
}

.sliding-panel-close {
  float: right;
  height: $hit-area;
  margin-right: -1.5rem;
  text-align: center;
  width: $hit-area;

  @media (min-width: $medium-screen) {
    display: none;
  }

  img {
    margin-top: 1.6rem;
    width: 1.3rem;
  }
}

.mobile-sidenav-active {
  overflow: hidden;
}

